2006-04-10  Benjamin Riefenstahl  <b.riefenstahl@turtle-trading.net>

	* macosx/tkMacOSXFont.c (MeasureStringWidth): Use implementation
	based on ATSUGetGlyphBounds (TK_MAC_USE_GETGLYPHBOUNDS), so we can
	use kATSUseFractionalOrigins.  This in turn corrects bug #1461650.
	* (InitFont): Use "." and "W" instead of "i" and "w" to determine the
	"-fixed" attribute.  This prevents "Apple Chancery" from being
	classified as fixed.
	* (InitFontFamilies): Only get the font families once.

2006-04-09  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXWm.c (WmResizableCmd): propagate window attribute
	changes to Carbon window manager. [FR 1467004]
	(TkSetWMName, TkMacOSXMakeRealWindowExist): allow empty name for
	toplevels, remove bogus initial window name. [Bug 1450800]

2006-04-07  Daniel Steffen  <das@users.sourceforge.net>

	*** 8.5a4 TAGGED FOR RELEASE ***

	* macosx/tkMacOSXMouseEvent.c (TkMacOSXProcessMouseEvent): fix return
	values, implement window dragging & growing in background (with Command
	key down) and by fronting clicks [Bug 934524], use correct button &
	modifier state API when application is in background (also in
	TkMacOSXButtonKeyState).

	* macosx/tkMacOSXWm.c (TkMacOSXGrowToplevel): ensure QD port is set
	correctly before using API relying on it.
	
2006-04-06  Vince Darley <vincentdarley@users.sourceforge.net>

	* macosx/tkMacOSXMouseEvent.c: now that [wm attributes -titlepath]
	works correctly, add OS support for dragging proxy icons and 
	using the titlepath menu.

2006-04-06  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXWm.c (WmAttributesCmd, WmIconbitmapCmd): fix errors
	in setting/removing window proxy icons via [wm attributes -titlepath]
	and [wm iconbitmap], use HIWindow API on Tiger or later. [Bug 1455241]
	
	* unix/tcl.m4: remove TCL_IO_TRACK_OS_FOR_DRIVER_WITH_BAD_BLOCKING
	define on Darwin. [Tcl Bug 1457515]
	* unix/configure: autoconf-2.59
	* unix/tkConfig.h.in: autoheader-2.59
